[package]
name = "blinkcast"
version = "0.1.1"
edition = "2021"
authors = ["Amjad Alsharafi <me@amjad.alsharafi.dev>"]
license = "MIT"
readme = "README.md"
description = "Fast, bounded, multiple-producer, multiple-consumer, lossy, broadcast channel"
repository = "https://github.com/Amjad50/blinkcast.git"
keywords = ["channel", "broadcast", "mpmc", "no_std"]
categories = ["concurrency", "no-std"]
rust-version = "1.60.0"

[features]
default = ["alloc"]

alloc = []
# This is used only for testing using `bench`, as it requires nightly
# doesn't provide any extra functionality
unstable = []

[target.'cfg(loom)'.dependencies]
loom = "0.7"
